<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/employee_items"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/recyclerview_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/employee_photo_rc"
            android:layout_width="69dp"
            android:layout_height="74dp"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            app:srcCompat="@drawable/e1"
            android:contentDescription="@string/photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id_tv_rc"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/ID"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titikDua"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/employee_id_rc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/employeeID"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_tv_rc"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Name"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titikDua"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/employee_name_rc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/EmployeeName"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/role_tv_rc"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Role"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titikDua"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/employee_role_rc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Division"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/status_tv_rc"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Status"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titikDua"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/employee_status_rc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/StatusActive"
                    android:textColor="#558B2F"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>