<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatusFragment"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minHeight="48dp"
        android:contentDescription="@string/filter" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/piechart_status"
                android:layout_width="154dp"
                android:layout_height="154dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:padding="6dp"
                tools:ignore="InefficientWeight" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/driver_color" />

                    <TextView
                        android:id="@+id/driver_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:text="@string/Driver"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/Countdriver_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="61dp"
                        android:text="@string/CountDriver"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/dispatcher_color"/>
                    <TextView
                        android:id="@+id/dispatcher_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Dispatcher"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"/>
                    <TextView
                        android:id="@+id/CountDispatcher_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/CountDispatcher"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/transportlead_color"/>
                    <TextView
                        android:id="@+id/transportlead_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Transportlead"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"/>
                    <TextView
                        android:id="@+id/CountTrans_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CountTransportlead"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/cashier_color"/>
                    <TextView
                        android:id="@+id/cashier_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Cashier"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"/>
                    <TextView
                        android:id="@+id/CountCashier_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="42dp"
                        android:text="@string/CountCashier"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <View
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@color/superadmin_color"/>
                    <TextView
                        android:id="@+id/superadmin_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Superadmin"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"/>
                    <TextView
                        android:id="@+id/CountAdmin_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:text="@string/CountSuperadmin"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_status"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        tools:listitem="@layout/rc_employee" />

</LinearLayout>