<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoleFragment"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner_role"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/filter"
        android:background="@drawable/filter_background" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph_role"
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="431dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2">

        <org.eazegraph.lib.charts.PieChart
            android:id="@+id/piechart_role"
            android:layout_width="329dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:padding="6dp" >
        </org.eazegraph.lib.charts.PieChart>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/active_color" />

                <TextView
                    android:id="@+id/active_tv_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/Active"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/CountActive_tv_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/CountActive"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@color/non_active_color" />

                <TextView
                    android:id="@+id/nonActive_tv_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/NonActive"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/CountNonActive_tv_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:text="@string/CountNonActive"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>